# xelis-playground

./: .gitignore  README.md  build.sh  build_wasm.sh  cf_build.sh  index.html  package-lock.json  package.json  serve.py  tsconfig.json  vite.config.js
public/: .gitignore  editor-selection.js  export-modal.js  func-list.js  hightlighted-code.js  index.css  index.html  index.js  silex-lang.js  split-layout.js  text-dot-loading.js  xelis_playground_bg.wasm
public/custom-select/: index.css  index.js
public/editor-features/: EditorFeatures.js  comment.js  editor-selection.js  index.js
public/modal/: index.css  index.js
public/parameter-builder/: ParameterBuilder.js  index.js
public/parameter-builder/parser/: xelis-xvm.js
public/parameter-builder/resources/css/: parameter-builder.css  style.css  type.css
public/parameter-builder/types/: array.js  boolean.js  enum.js  map.js  simple.js  struct.js
public/styles/: app.css  custom_select.css  modal.css  parameter_builder.css
src/: RightPanelModes.ts  StorageEditor.ts  UIContainers.ts  Utils.ts  app.ts  custom_select.ts  editor_features.ts  examples.ts  func_list.ts  highlighted_code.ts  index.ts  modal.ts  model_export.ts  project.ts  silex.ts  silex_lang.ts  split_layout.ts  svg.d.ts  text_dot_loading.ts
src/RPCInspector/: index.ts  rpc_api_data.ts
src/parameter_builder/: data_type.ts  parameter_builder.ts  xvm_param_parser.ts
src/parameter_builder/types/: array.ts  boolean.ts  enum.ts  map.ts  opaque.ts  simple.ts  struct.ts
src/styles/: ace_editor_xelis_p.css  app.css  app_2.css  custom_select.css  font_types.css  index.ts  modal.css  parameter_builder.css
src/workers/project_management/: last_used_poll_worker.js  opfs_worker.js  shared.js
src/workers/silex/: serializer.js  silex_worker.js
xelis-playground/: Cargo.toml
xelis-playground-wasm/: Cargo.toml
xelis-playground-wasm/src/: lib.rs
xelis-playground/.cargo/: config.toml
xelis-playground/src/: lib.rs  storage.rs
