[package]
name = "xelis-playground-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.95"
xelis_vm = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-vm" }
xelis_bytecode = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-bytecode" }
xelis_compiler = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-compiler" }
xelis_parser = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-parser" }
xelis_lexer = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-lexer" }
xelis_builder = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-builder" }
anyhow = "1.0.93"

[lib]
crate-type = ["cdylib", "rlib"]
