[package]
name = "xelis-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.95"
xelis_vm = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-vm" }
xelis_bytecode = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-bytecode" }
xelis_compiler = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-compiler" }
xelis_parser = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-parser" }
xelis_lexer = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-lexer" }
xelis_builder = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-builder" }
xelis_types = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-types" }
xelis_common = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "smart-contracts", package = "xelis_common" }

anyhow = "1.0.93"
web-time = "1.1.0"
humantime = "2.1.0"
tokio_with_wasm = { version = "0.7.4", features = ["rt"] }
wasm-bindgen-futures = "0.4.45"

[lib]
crate-type = ["cdylib", "rlib"]
