[package]
name = "xelis-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.95"
xelis_vm = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-vm" }
xelis_bytecode = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-bytecode" }
xelis_compiler = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-compiler" }
xelis_parser = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-parser" }
xelis_lexer = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-lexer" }
xelis_builder = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-builder" }
xelis_types = { git = "https://github.com/xelis-project/xelis-vm.git", branch = "dev", package = "xelis-types" }
xelis_common = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "dev", package = "xelis_common" }

anyhow = "1.0.93"
web-time = "1.1.0"
humantime = "2.1.0"
wasm-bindgen-futures = "0.4.45"
indexmap = "2.7.0"
hex = "0.4.3"
cfg-if = "1.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio_with_wasm = { version = "0.7.4", features = ["rt"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[lib]
crate-type = ["cdylib", "rlib"]
